--- a/package.json
+++ b/package.json
@@ -47,5 +47,5 @@
     "gh-pages": "^4.0.0",
     "prettier": "^2.8.1"
   },
-  "homepage": "https://bitnaleeeee.github.io/build"
+  "homepage": "https://bitnaleeeee.github.io/build/"
 }
